[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = "0.15.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
opt-level = 0           # 优化级别,最低是0,最高是3, 0方便debug
overflow-checks = false # 关闭整数溢出检查
